@@ -1,3 +1,7 @@
+2003-01-17  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl: change \w+ to [^ ]+ in ircbridge nick detection
+
 2003-01-15  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl (addMessage): show ircbridge users as <$nick> in the
